Added operations playbooks for managing users.
- create user
- disable user
- remove user
- force reset password

--- a/roles/base/tasks/debian.yml
+++ b/roles/base/tasks/debian.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install base packages for Debian family OSs
+- name: Install base packages (Debian)
   apt:
     name: "{{ item }}"
     update_cache: yes
