--- a/roles/base/tasks/rhel.yml
+++ b/roles/base/tasks/rhel.yml
@@ -15,7 +15,7 @@
     key: "{{ epel_repo_gpg_key_url }}"
     state: present
 
-- name: Install base packages for Red Hat family OSs
+- name: Install base packages (Red Hat)
   yum:
     name: "{{ item }}"
     update_cache: yes
