--- a/ansible.cfg
+++ b/ansible.cfg
@@ -2,6 +2,7 @@
 host_key_checking = False
 sudo_flags = -HE
 transport = ssh
+roles_path = galaxy-roles
 
 [ssh_connection]
 ssh_args = -o ForwardAgent=yes -o ControlMaster=auto -o ControlPersist=120s -o Compression=yes
